fixed navbar dropdown z-index

--- a/rpgine_comapp_danceofdragons/static/danceofdragons/css/dashboard.css
+++ b/rpgine_comapp_danceofdragons/static/danceofdragons/css/dashboard.css
@@ -3,7 +3,7 @@ body {
 }
 
 .navbar-nav > li > .dropdown-menu {
-    background-color: #222222;
+    background-color: #393939;
     z-index: 150;
 }
 
